--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-dialog": "^5.6.0",
+    "react-native-dialog-input": "^1.0.7",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-material-cards": "^1.0.9",
